[package]
name = "rsc"
version = "1.2.0"
edition = "2018"
authors = ["Luke Wilson"]
description = "A pure-Rust handwritten scientific calculator for solving math equations in strings."
repository = "https://github.com/asmoaesl/rsc"
readme = "README.md"
keywords = ["scientific", "calculator", "parser", "expression"]
categories = ["command-line-utilities", "parsing", "science"]
license = "MIT"

[lib]
path = "src/lib.rs"

[dev-dependencies]
criterion = "0.2"

[dependencies]
structopt = { version = "0.2", optional = true }
colored = { version = "1.7", optional = true }

[features]
build-binary = ["structopt", "colored"]

[[bin]]
name = "rsc"
path = "src/bin/main.rs"
required-features = ["build-binary"]

[[bench]]
name = "rsc_benchmark"
harness = false
