[package]
name = "rsc"
version = "2.0.0"
edition = "2018"
authors = ["Luke I. Wilson"]
description = "A zero-dependency calculator for solving scientific math equations in strings."
repository = "https://github.com/asmoaesl/rsc"
readme = "README.md"
keywords = ["scientific", "calculator", "parser", "expression"]
categories = ["command-line-utilities", "parsing", "science"]
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
# dependencies for the binary version
structopt = { version = "0.2", optional = true }
colored = { version = "1.7", optional = true }

[features]
build-binary = ["structopt", "colored"]

[[bin]]
name = "rsc"
path = "src/bin/main.rs"
required-features = ["build-binary"]
