[package]
name = "rsc"
version = "3.0.0"
edition = "2018"
authors = ["Luke I. Wilson <thelukaswils@gmail.com>"]
description = "A fast calculator for solving scientific and algebraic math equations in strings."
repository = "https://github.com/fivemoreminix/rsc"
readme = "README.md"
keywords = ["scientific", "calculator", "parser", "expression"]
categories = ["command-line-utilities", "parsing", "science"]
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rsc"
path = "src/bin/main.rs"
required-features = ["executable"]

[features]
executable = ["structopt", "colored"]

[dependencies]
peekmore = "1.0.0"
#num = "0.4.0"
# dependencies for the runnable version (feature "executable")
structopt = { version = "0.3", optional = true }
colored = { version = "2.0", optional = true }
